--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,7 @@
 body {
     font: 15px/1.5 Arial, Helvetica, sans-serif;
-    margin: 10px;
-    padding: 10px;
     background-color: #f4f4f4;
+    color: rgba(37, 28, 4, 0.842);
 }
 
 h1 {
@@ -20,29 +19,75 @@ h4 {
 
 #close {
     color: #000;
-    font-size: 12px bold;
+    font-size: 2.5vw;
     text-align: center;
+    font-weight: bold;
 }
 
 #info {
-    padding-left: 50px;
+    margin: 25px;
     background-color: #ffffff;
+    font-size: 1.0em;
 }
 
 header {
     background: #c0c0c0;
     color: #ffffff;
-    padding-top: 30px;
     border-bottom: #f00 3px solid;
 }
 
+main {
+    position: relative;
+    padding: 30px;
+    margin-left: 32px;
+    margin-bottom: 56px;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+.links {
+    margin-right: 12px;
+    text-align: left;
+    opacity: 0.76;
+    color: rgba(24, 18, 1, 0.842);
+}
+
+#ingredients li{
+    width: 350px;
+    list-style: square;
+    box-shadow: 0 10px 20px rgba(189, 97, 97, 0.19), 0 6px 6px rgba(66, 28, 28, 0.23);
+    transform: skewY(7deg);
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+#ingredients li:hover{
+    animation-name: select;
+    animation-duration: 750ms;
+    animation-iteration-count: infinite;
+    animation-fill-mode: backwards;
+    animation-timing-function: ease-out;
+}
+
+@keyframes select {
+    50% {
+        background: rgba(165, 14, 52, 0.925);
+    }
+    100% {
+        background: rgba(105, 6, 75, 0.918);
+    }
+}
+
 aside#more {
-    width: 20%;
+    width: 25vw;
     margin-top: 10px;
 }
 
 aside#more .details input, aside#more .details textarea{
-    width: 90%;
+    width: 20vw;
     padding: 5px;
 }
 
@@ -62,8 +107,24 @@ button {
     padding-left: 20px;
     padding-right: 20px;
     color: #ffffff;
+    cursor: pointer;
 }
 
+button:hover {
+    animation-name: change;
+    animation-duration: 700ms;
+    animation-fill-mode: forwards;
+    animation-iteration-count: infinite;
+}
+
+@keyframes change {
+    50% {
+        background: rgba(168, 5, 38, 0.925);
+    }
+    100% {
+        background: rgba(20, 5, 87, 0.918);
+    }
+}
 
 footer{
     padding: 10px;
